--- a/css/common-properties.css
+++ b/css/common-properties.css
@@ -4,6 +4,7 @@
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
     padding: 0;
+    box-sizing: content-box;
 }
 
 .wid13 {
