--- a/css/defaultstyle.css
+++ b/css/defaultstyle.css
@@ -1,4 +1,5 @@
 .nav-bar {
+    width: 100%;
     background-color: antiquewhite;
     font-size: medium;
     flex-direction: row;
@@ -33,6 +34,7 @@ body {
     margin: 0;
     padding: 0;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: flex-start;
 }
@@ -44,6 +46,22 @@ body {
     box-shadow: 0 0 1rem rgba(0, 0, 0, 0.1);
     width: 100%;
     margin: 0 auto;
+}
+
+
+.login-base-form  {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    gap: 0;
+}
+
+.details-base-form {
+    display: flex;
+    width: 80%;
+    flex-direction: column;
+    gap: 0;
+    margin: auto;
 }
 
 .survey-container {
@@ -308,8 +326,10 @@ button:hover {
 
 .password-container {
     position: relative;
+    width: 100%;
     display: flex;
     align-items: center;
+    margin-top: 0;
 }
 
 .password-container input {
@@ -333,7 +353,12 @@ button:hover {
     padding: 20px;
 }
 
-.survey-detail {
+.stats-body {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.survey-stat {
     flex: 1 1 calc(33.333% - 20px);
     box-sizing: border-box;
     padding: 10px;
