--- a/css/defaultstyle.css
+++ b/css/defaultstyle.css
@@ -8,6 +8,7 @@
 }
 
 .nav-bar li {
+    cursor: default;
     padding: 0.6rem;
     text-align: center;
     list-style: none;
@@ -46,6 +47,16 @@ body {
     box-shadow: 0 0 1rem rgba(0, 0, 0, 0.1);
     width: 100%;
     margin: 0 auto;
+}
+
+#submit-btn {
+    display: flex;
+    padding: 1rem 0.5rem;
+    border-radius: 0.8rem;
+    margin: auto;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(222, 222, 86);
 }
 
 
